Fix the spacing issue in select component

--- a/src/styles/Select.module.css
+++ b/src/styles/Select.module.css
@@ -3,5 +3,5 @@
 }
 
 .input {
-  height: calc(2.375rem * var(--mantine-scale));
+  height: calc(2.438rem * var(--mantine-scale)) !important;
 }
